syntax = "proto3";

option java_multiple_files=true;
option java_package = "com.omniversity.verification_service.grpc";
option java_outer_classname="VerificationProto";

service VerificationService {
  rpc sendVerificationRequest (VerificationRequest) returns (VerificationResponse);
}

message VerificationRequest {
  int64 id = 1;
  string email = 2;
  string code = 3;
  int32 emailType = 4;

}

message VerificationResponse {
  bool success = 1;
  string message = 2;
}
